--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -9,7 +9,8 @@ jobs:
   push-image:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout mainline
+        uses: actions/checkout@master
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1      
       - name: Login to the container registry
