--- a/.github/workflows/trivy-scan.yaml
+++ b/.github/workflows/trivy-scan.yaml
@@ -7,6 +7,8 @@ jobs:
     permissions:
       security-events: write
     steps:
+      - name: Checkout mainline
+        uses: actions/checkout@master    
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
