--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -3,12 +3,34 @@ on: [pull_request]
 jobs:
   verify-image:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write    
     steps:
       - name: Checkout pull request
         uses: actions/checkout@master
       - name: Build a temporary image for verification
         run: docker build . -t groundhog2k/distroless-base-image:verify
-      - name: Scan with Trivy
-        uses: ./.github/workflows/trivy-scan.yaml
-      - name: Scan with Grype
-        uses: ./.github/workflows/grype-scan.yaml
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "groundhog2k/distroless-base-image:verify"
+          format: "sarif"
+          output: "trivy-results.sarif"
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: "trivy-results.sarif"
+          category: trivy-scan
+      - name: Run Grype vulnerability scanner
+        id: scan
+        uses: anchore/scan-action@v3
+        with:
+          image: "groundhog2k/distroless-base-image:verify"
+          severity-cutoff: "low"
+          fail-build: false
+          output-format: "sarif"
+      - name: Upload Grype scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+          category: grype-scan
