--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,3 +1,4 @@
+name: Push to main line
 on:
   push:
     branches:
@@ -6,33 +7,7 @@ on:
     - cron: "0 0 * * 1"
 
 jobs:
-  push-image:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout mainline
-        uses: actions/checkout@master
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1      
-      - name: Login to the container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: groundhog2k/distroless-base-image:11, groundhog2k/distroless-base-image:bullseye
-          labels: |
-            org.opencontainers.image.title=${{ github.event.repository.name }}
-            org.opencontainers.image.description=${{ github.event.repository.description }}
-            org.opencontainers.image.url=${{ github.event.repository.html_url }}
-            org.opencontainers.image.source=${{ github.event.repository.clone_url }}
-            org.opencontainers.image.created=${{ steps.prep.outputs.created }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
+  build-and-push:
+    uses: ./.github/workflows/wf_buildandpush.yaml
+    with:
+      tags: "groundhog2k/distroless-base-image:11, groundhog2k/distroless-base-image:bullseye"
