--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -2,10 +2,11 @@ name: Pull request
 
 on: [pull_request]
 
+env:
+  DEFAULT_ROOTFS_VERSION: bullseye
+
 jobs:
   verify-and-scan:
-    env:
-      DEFAULT_ROOTFS_VERSION: "bullseye"
     uses: ./.github/workflows/wf_verifyandscan.yaml
     with:
       rootfs_version: ${{ env.DEFAULT_ROOTFS_VERSION }}
