--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -12,4 +12,4 @@ jobs:
       security-events: write  
     uses: ./.github/workflows/wf_verifyandscan.yaml
     with:
-      rootfs_version: $DEFAULT_ROOTFS_VERSION
+      rootfs_version: ${{ env.$DEFAULT_ROOTFS_VERSION }}
