Fix secret access

--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -11,6 +11,7 @@ jobs:
     with:
       rootfs_version: "bullseye"
   build-and-push-bullseye:
+    secrets: inherit
     uses: ./.github/workflows/wf_buildandpush.yaml
     with:
       tags: "groundhog2k/distroless-base-image:11, groundhog2k/distroless-base-image:bullseye"
