--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -9,4 +9,5 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/wf_buildandpush.yaml
     with:
+      rootfs_version: "bullseye"
       tags: "groundhog2k/distroless-base-image:11, groundhog2k/distroless-base-image:bullseye"
