Revert "Updated pipeline for debian 12 bookworm"
This reverts commit 4ac222ad12d21175038a257fb70b5791837d0496.

--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -9,4 +9,4 @@ jobs:
       security-events: write  
     uses: ./.github/workflows/wf_verifyandscan.yaml
     with:
-      rootfs_version: "bookworm"
+      rootfs_version: "bullseye"
