--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-and-push-bullseye:
     secrets: inherit
-    uses: ./.github/workflows/wf_buildandpush.yaml
-    with:
-      rootfs_version: "bullseye"
-      tags: "groundhog2k/distroless-base-image:11, groundhog2k/distroless-base-image:bullseye"
+    uses: ./.github/workflows/wf_build-bullseye.yaml
+  build-and-push-bookworm:
+    secrets: inherit
+    uses: ./.github/workflows/wf_build-bookworm.yaml
