--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -4,9 +4,17 @@ on:
   pull_request:
 
 jobs:
-  verify-and-scan:
+  verify-and-scan-bullseye:
     permissions:
       security-events: write  
     uses: ./.github/workflows/wf_verifyandscan.yaml
     with:
       rootfs_version: "bullseye"
+      dockerfile: "Dockerfile.11"
+  verify-and-scan-bookworm:
+    permissions:
+      security-events: write  
+    uses: ./.github/workflows/wf_verifyandscan.yaml
+    with:
+      rootfs_version: "bookworm"
+      dockerfile: "Dockerfile.12"
