--- a/.github/workflows/wf_buildandpush.yaml
+++ b/.github/workflows/wf_buildandpush.yaml
@@ -8,6 +8,9 @@ on:
       tags:
         required: true
         type: string
+      dockerfile:
+        required: true
+        type: string
 
 jobs:
   push-image:
@@ -28,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./${{ inputs.dockerfile }}
           platforms: linux/amd64
           push: true
           tags: ${{ inputs.tags }}
