--- a/.github/workflows/wf_build-bookworm.yaml
+++ b/.github/workflows/wf_build-bookworm.yaml
@@ -4,6 +4,7 @@ on:
 
 jobs:
     build-and-push-bookworm:
+      secrets: inherit
       uses: ./.github/workflows/wf_buildandpush.yaml
       with:
         rootfs_version: "bookworm"
