--- a/Dockerfile.11
+++ b/Dockerfile.11
@@ -6,11 +6,11 @@ ARG ROOTFS_VERSION
 WORKDIR /debianroot
 RUN apt-get update && apt-get install -y xz-utils
 # download and extract debian rootfs into workdir
-RUN curl -SL "https://github.com/debuerreotype/docker-debian-artifacts/raw/dist-amd64/${ROOTFS_VERSION}/slim/rootfs.tar.xz" -o rootfs.tar.xz
+RUN curl -SL "https://github.com/debuerreotype/docker-debian-artifacts/raw/dist-amd64/${ROOTFS_VERSION}/slim/oci/blobs/rootfs.tar.gz" -o rootfs.tar.gz
 # extract only the minimum that is necessary to execute JRE
-RUN tar xvf rootfs.tar.xz usr/lib/locale lib/x86_64-linux-gnu lib64 etc/os-release etc/ld.so.conf.d etc/debian_version usr/lib/x86_64-linux-gnu usr/lib/os-release --same-owner
+RUN tar xvf rootfs.tar.gz usr/lib/locale lib/x86_64-linux-gnu lib64 etc/os-release etc/ld.so.conf.d etc/debian_version usr/lib/x86_64-linux-gnu usr/lib/os-release --same-owner
 # remove downloaded archive
-RUN rm rootfs.tar.xz
+RUN rm rootfs.tar.gz
 
 FROM scratch
 # copy debian rootfs parts
